improved targetting and updated width for p tag to prevent horizontal scrolling

--- a/pages/page2.css
+++ b/pages/page2.css
@@ -51,19 +51,19 @@
   #page2 {
     flex-direction: column;
   }
-  p {
-    width: 90vw;
+  #page2 p {
+    width: calc(90vw - 2.5rem);
   }
-  span {
+  #page2 span {
     font-size: 0.75rem;
   }
 }
 
 @media (min-width: 1024px) {
-  p {
+  #page2 p {
     font-size: 1rem;
   }
-  img {
+  #page2 img {
     width: 235px;
   }
   .cynthiadp {
@@ -72,7 +72,7 @@
 }
 
 @media (min-width: 1280px) {
-  p {
+  #page2 p {
     font-size: 1.125rem;
     line-height: 28px;
   }
